deployed url added

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
-MONGO_URI=mongodb://localhost:27017/todo-list
+# MongoDB Atlas (update with correct credentials)
+MONGO_URI=mongodb+srv://ramprasanth7119:ramprasanth7119@notes.o9jx6pu.mongodb.net/?retryWrites=true&w=majority&appName=notes
+# MONGO_URI=mongodb+srv://ramprasanth2802:ramprasanth2802@cluster0.xg79jmu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+
+
